support of GraydientTheme for qooxdoo v6.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-/demo/default/source/script/
-/nbproject/project.properties
-/nbproject/project.xml
+# .gitignore template for skeleton-based apps
+/compiled
+/qx_packages
+.package-cache.json
