--- a/Manifest.json
+++ b/Manifest.json
@@ -1,28 +1,23 @@
 {
+ "$schema": "https://qooxdoo.org/schema/Manifest-1-0-0.json",
   "info" :
   {
     "name" : "GraydientTheme",
-    "category" : ["theme"],
 
-    "summary" : "Dark Theme Contribution",
-    "description" : "A dark theme for qx 3.0 and above.",
+    "summary" : "Graydient Theme Contribution",
+    "description" : "A graydient theme for qx 6.0.",
 
-    "homepage" : "https://github.com/scro34/GraydientTheme",
+    "homepage" : "https://github.com/goldim/GraydientTheme",
 
-    "license" : "LGPL/EPL",
-    "authors" :
-    [
-      {
-        "name" : "Norbert Schröder (scro34)",
-        "email" : "schroeder@scro34.de"
-      }
-    ],
+    "license" : "MIT license",
+    "authors" : [
+  {
+    "name": "Norbert Schröder (scro34)",
+    "email": "schroeder@scro34.de"
+  }
+],
 
-    "version" : "master",
-    "qooxdoo-versions": ["3.0", "3.5", "4.0", "4.1", "5.0"],
-
-    "download" : "",
-    "checksum" : ""
+    "version" : "2.0.0"
   },
 
   "provides" :
@@ -32,7 +27,35 @@
     "class"       : "source/class",
     "resource"    : "source/resource",
     "translation" : "source/translation",
-    "type"        : "contribution"
+    "application": {
+      "class": "widgetbrowser.Application",
+      "theme": "graydienttheme.theme.Theme",
+      "name": "widgetbrowser",
+      "title": "WidgetBrowser",
+      "include": [
+        "qx.theme.Simple",
+        "qx.theme.Classic",
+        "widgetbrowser.pages.Tree",
+        "widgetbrowser.pages.List",
+        "widgetbrowser.pages.Table",
+        "widgetbrowser.pages.Form",
+        "widgetbrowser.pages.ToolBar",
+        "widgetbrowser.pages.Window",
+        "widgetbrowser.pages.Tab",
+        "widgetbrowser.pages.Control",
+        "widgetbrowser.pages.Embed",
+        "widgetbrowser.pages.EmbedFrame",
+        "widgetbrowser.pages.Basic",
+        "widgetbrowser.pages.Misc"
+      ],
+      "exclude": [
+        "qx.theme.Modern"
+      ]
+    }
+  },
+
+  "requires": {
+    "@qooxdoo/framework": "^6.0.0",
+    "@qooxdoo/compiler" : "^1.0.0"
   }
 }
-
