--- a/Manifest.json
+++ b/Manifest.json
@@ -1,32 +1,25 @@
 {
- "$schema": "https://qooxdoo.org/schema/Manifest-1-0-0.json",
-  "info" :
-  {
-    "name" : "GraydientTheme",
-
-    "summary" : "Graydient Theme Contribution",
-    "description" : "A graydient theme for qx 6.0.",
-
-    "homepage" : "https://github.com/goldim/GraydientTheme",
-
-    "license" : "MIT license",
-    "authors" : [
-  {
-    "name": "Norbert Schröder (scro34)",
-    "email": "schroeder@scro34.de"
-  }
-],
-
-    "version" : "2.0.0"
+  "$schema": "https://qooxdoo.org/schema/Manifest-1-0-0.json",
+  "info": {
+    "name": "GraydientTheme",
+    "summary": "Graydient Theme Contribution",
+    "description": "A graydient theme for qx 6.0.",
+    "homepage": "https://github.com/goldim/GraydientTheme",
+    "license": "MIT license",
+    "authors": [
+      {
+        "name": "Norbert Schröder (scro34)",
+        "email": "schroeder@scro34.de"
+      }
+    ],
+    "version": "2.0.0"
   },
-
-  "provides" :
-  {
-    "namespace"   : "graydienttheme",
-    "encoding"    : "utf-8",
-    "class"       : "source/class",
-    "resource"    : "source/resource",
-    "translation" : "source/translation",
+  "provides": {
+    "namespace": "graydienttheme",
+    "encoding": "utf-8",
+    "class": "source/class",
+    "resource": "source/resource",
+    "translation": "source/translation",
     "application": {
       "class": "widgetbrowser.Application",
       "theme": "graydienttheme.theme.Theme",
@@ -53,9 +46,8 @@
       ]
     }
   },
-
   "requires": {
     "@qooxdoo/framework": "^6.0.0",
-    "@qooxdoo/compiler" : "^1.0.0"
+    "@qooxdoo/compiler": "^1.0.0"
   }
 }
