--- a/Manifest.json
+++ b/Manifest.json
@@ -1,53 +1,32 @@
 {
-  "$schema": "https://qooxdoo.org/schema/Manifest-1-0-0.json",
+  "$schema": "https://qooxdoo.org/schema/Manifest-2-0-0.json",
   "info": {
     "name": "GraydientTheme",
     "summary": "Graydient Theme Contribution",
-    "description": "A graydient theme for qx 6.0.",
+    "description": "A graydient theme for qx 7.0",
     "homepage": "https://github.com/goldim/GraydientTheme",
     "license": "MIT license",
     "authors": [
       {
         "name": "Norbert Schröder (scro34)",
-        "email": "schroeder@scro34.de"
+        "email": ""
+      },
+      {
+        "name": "Dmitrii Zolotov",
+        "email": "zolotovdy@yandex.ru"
       }
     ],
-    "version": "2.0.0"
+    "version": "1.0.0"
   },
   "provides": {
     "namespace": "graydienttheme",
     "encoding": "utf-8",
     "class": "source/class",
     "resource": "source/resource",
-    "translation": "source/translation",
-    "application": {
-      "class": "widgetbrowser.Application",
-      "theme": "graydienttheme.theme.Theme",
-      "name": "widgetbrowser",
-      "title": "WidgetBrowser",
-      "include": [
-        "qx.theme.Simple",
-        "qx.theme.Classic",
-        "widgetbrowser.pages.Tree",
-        "widgetbrowser.pages.List",
-        "widgetbrowser.pages.Table",
-        "widgetbrowser.pages.Form",
-        "widgetbrowser.pages.ToolBar",
-        "widgetbrowser.pages.Window",
-        "widgetbrowser.pages.Tab",
-        "widgetbrowser.pages.Control",
-        "widgetbrowser.pages.Embed",
-        "widgetbrowser.pages.EmbedFrame",
-        "widgetbrowser.pages.Basic",
-        "widgetbrowser.pages.Misc"
-      ],
-      "exclude": [
-        "qx.theme.Modern"
-      ]
-    }
+    "translation": "source/translation"
   },
   "requires": {
-    "@qooxdoo/framework": "^6.0.0",
-    "@qooxdoo/compiler": "^1.0.0"
+    "@qooxdoo/framework": "^7.6.3",
+    "qooxdoo/qxl.formdemo": "^2.0.0"
   }
 }
