Added mail of author

--- a/Manifest.json
+++ b/Manifest.json
@@ -9,7 +9,7 @@
     "authors": [
       {
         "name": "Norbert Schröder (scro34)",
-        "email": ""
+        "email": "n.schroeder@scro34.de"
       },
       {
         "name": "Dmitrii Zolotov",
